# similarity

./: CMakeLists.txt  README.md
cmake/macro/: DllExport.h.in  GenericLibraryHeader.h.in  Version.h.in  macroInstall.cmake  macroPack.cmake  macroQt.cmake  macroUtils.cmake
examples/: CMakeLists.txt  minimalist_main.cpp  similarity.conf  similarity.cpp  simili_main.cpp
py/: similarity.py
resources/: CMakeLists.txt
resources/icons/: README.md
src/: CMakeLists.txt
src/simili/: CMakeLists.txt  ComparisonDisplayerWidget.cpp  ComparisonDisplayerWidget.h  ComputePairsThread.cpp  ComputePairsThread.h  DllExport.h  FolderSelecterWidget.cpp  FolderSelecterWidget.h  ImageViewerWidget.cpp  ImageViewerWidget.h  ImgDisplayerWidget.cpp  ImgDisplayerWidget.h  LabeledProgressBar.cpp  LabeledProgressBar.h  OptionSelecterWidget.cpp  OptionSelecterWidget.h  QAVIMovie.cpp  QAVIMovie.h  QGIFMovie.cpp  QGIFMovie.h  SimilarCheckerWidget.cpp  SimilarCheckerWidget.h  Version.h  basicSimiliWidget.cpp  basicSimiliWidget.h  basicSimiliWidget.ui
src/simili_algorithm/: CMakeLists.txt  DllExport.h  SimilarByteComparison.cpp  SimilarByteComparison.h  SimilarExtraction.cpp  SimilarExtraction.h  Utils.cpp  Utils.h
